@@ -24,6 +24,7 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs = listOf("--add-opens=java.base/java.util=ALL-UNNAMED")
 }
 
 sonarqube {
