@@ -39,6 +39,7 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs = listOf("--add-opens=java.base/java.util=ALL-UNNAMED")
 }
 
 java {
